# skivvy-pfinder

./: .gitignore  README.md  configure-debug.sh  configure.ac
docs/: manual.text
src/: Makefile.am  plugin-pfinder-oacom.cpp  plugin-pfinder.cpp
src/include/skivvy/: plugin-pfinder-oacom.h  plugin-pfinder.h
src/include/skivvy-pfinder/: plugin-pfinder.h
